[package]
name = "ms5803-14ba"
version = "0.3.3"
edition = "2021"
license = "MIT"
description = "embedded-hal async and async driver for the MS5803-14BA pressure sensor"
homepage = "https://github.com/csicar/ms5803-14ba"
repository = "https://github.com/csicar/ms5803-14ba"
categories = ["embedded", "no-std"]
keywords = ["embedded-hal", "ms5803", "ms5803014ba"]

[dependencies]
defmt = { version = "0.3.10", optional = true }
embedded-hal-async = { version = "1.0.0", optional = true }
embedded-hal = { "version" = "1.0.0", optional = true }
maybe-async = "0.2.10"

[features]
default = ["async"]
logging = ["dep:defmt"]
sync = ["dep:embedded-hal", "maybe-async/is_sync"]
async = ["dep:embedded-hal-async"]

[dev-dependencies]
embedded-hal-mock = { version = "0.11.1", features = ["embedded-hal-async"] }
tokio = { version = "1.43.0", features = ["macros", "rt"] }
